--- a/templates/_3_index.html
+++ b/templates/_3_index.html
@@ -350,5 +350,12 @@
             return num;
         }
     </script>
+    <div style="margin-top: 8px; padding: 3px 0 0 0; text-align:left; color:#333; font-size:16px;">
+        <p style="margin-bottom: 6px;"><u>Scoring rules:</u></p>
+        <ul style="margin-top:0;">
+            <li>Score = 100 - steps (fewer steps, higher score)</li>
+            <li>+10 points if all tiles in the winning hand are Characters (Manzu, i.e. C1-C9)</li>
+        </ul>
+    </div>
 </body>
 </html> 
